# bring-app

./: .gitignore  README.md  bring_client.py  demo.py  pyproject.toml
deepseek_implementation/: README.md  bring_client_kaggle.py  receipt_shopping_list_comparator.ipynb
pytesseract_implementation/: .env.example  README.md  bring_client.py  pyproject.toml
