[project]
name = "bring-app"
version = "0.1.0"
description = "Automatisierung der Einkaufslistenverwaltung durch KI-gestützte Beleglesung"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.11.0",
    "addict>=2.4.0",
    "dotenv>=0.9.9",
    "easydict>=1.13",
    "einops>=0.8.1",
    "matplotlib>=3.10.7",
    "ollama>=0.6.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "python-bring-api>=3.0.0",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers==4.47.1",
]
